--- a/InsuranceApp/Base.lproj/Main.storyboard
+++ b/InsuranceApp/Base.lproj/Main.storyboard
@@ -21,7 +21,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="90.401785714285708"/>
+            <point key="canvasLocation" x="-1258" y="-648"/>
         </scene>
     </scenes>
     <resources>
