--- a/InsuranceApp/Base.lproj/Main.storyboard
+++ b/InsuranceApp/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="710.14492753623199" y="-549.10714285714278"/>
+            <point key="canvasLocation" x="223" y="-549"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="2he-RO-8NQ">
@@ -40,7 +40,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Oje-Av-wMq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-200.00000000000003" y="-549.10714285714278"/>
+            <point key="canvasLocation" x="-446" y="-549"/>
         </scene>
     </scenes>
     <resources>
